php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30276 Ctype_digit causes apache to crash
Submitted: 2004-09-29 15:41 UTC Modified: 2004-09-30 03:24 UTC
From: stephen_edmonds at btinternet dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 4.3.9 OS: Windows XP (SP2)
Private report: No CVE-ID: None
 [2004-09-29 15:41 UTC] stephen_edmonds at btinternet dot com
Description:
------------
When ctype_digit is passed a large number, it causes the apache child thread to terminate with the code "3221225477". When apache tries to restart the child thread, it crashes with the same code about 20 seconds later. The only way to stop this crash cycle is to shutdown/restart the apache server.

This bug was supposedly fixed in bug #29226 - but php 4.3.9 still seems to be effected.

Reproduce code:
---------------
<?
// WARNING - This may crash your apache server //
// Notice there are no " " around the number //
print ctype_digit( 1094164380 );
?>

Expected result:
----------------
true

Actual result:
--------------
The apache child thread will crash.
When the child is re-started by apache, it will crash 20 seconds later.
This will continue to happen until the apache server is shutdown or restarted.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-09-30 03:24 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 15:00:02 2026 UTC