MFH: Fixed bug #30276 (Possible crash in ctype_digit on large numbers).